Add per-app language preferences support
Related: https://android-developers.googleblog.com/2022/11/per-app-language-preferences-part-1.html?m=1

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.PineappleLockScreen" parent="android:Theme.Material.Light.NoActionBar">
+    <style name="Theme.PineappleLockScreen" parent="Theme.AppCompat">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@color/purple_700</item>
     </style>
 </resources>
