Add German language to locale_config and language setting
Thanks Ganneff on Codeberg for the translation!

--- a/app/src/main/res/xml/locale_config.xml
+++ b/app/src/main/res/xml/locale_config.xml
@@ -4,6 +4,8 @@
     <locale android:name="en"/>
     <!-- Simplified Chinese -->
     <locale android:name="zh-CN"/>
+    <!-- German -->
+    <locale android:name="de"/>
     <!-- Brazilian Portuguese -->
     <locale android:name="pt-BR"/>
 </locale-config>
