Add Dutch language to locale_config and language setting
Thanks Vistaus on Codeberg for the translation!

--- a/app/src/main/res/xml/locale_config.xml
+++ b/app/src/main/res/xml/locale_config.xml
@@ -6,6 +6,8 @@
     <locale android:name="zh-CN"/>
     <!-- German -->
     <locale android:name="de"/>
+    <!-- Dutch -->
+    <locale android:name="nl"/>
     <!-- Brazilian Portuguese -->
     <locale android:name="pt-BR"/>
 </locale-config>
