Add Polish language to locale_config and language setting
Thanks Eryk (ewm) Michalak on Codeberg for the translation!

--- a/app/src/main/res/xml/locale_config.xml
+++ b/app/src/main/res/xml/locale_config.xml
@@ -8,6 +8,8 @@
     <locale android:name="de"/>
     <!-- Dutch -->
     <locale android:name="nl"/>
+    <!-- Polish -->
+    <locale android:name="pl"/>
     <!-- Brazilian Portuguese -->
     <locale android:name="pt-BR"/>
 </locale-config>
