Add 'Install source' to About screen for easier troubleshooting

--- a/app/src/main/res/xml/locale_config.xml
+++ b/app/src/main/res/xml/locale_config.xml
@@ -6,10 +6,14 @@
     <locale android:name="zh-CN"/>
     <!-- German -->
     <locale android:name="de"/>
+    <!-- Japanese -->
+    <locale android:name="ja"/>
     <!-- Dutch -->
     <locale android:name="nl"/>
     <!-- Polish -->
     <locale android:name="pl"/>
     <!-- Brazilian Portuguese -->
     <locale android:name="pt-BR"/>
+    <!-- Turkish -->
+    <locale android:name="tr"/>
 </locale-config>
