i18n: add zh_HK and zh_TW translation

--- a/app/src/main/res/xml/locale_config.xml
+++ b/app/src/main/res/xml/locale_config.xml
@@ -4,6 +4,9 @@
     <locale android:name="en"/>
     <!-- Simplified Chinese -->
     <locale android:name="zh-CN"/>
+    <!-- Traditional Chinese -->
+    <locale android:name="zh-HK"/>
+    <locale android:name="zh-TW"/>
     <!-- German -->
     <locale android:name="de"/>
     <!-- Japanese -->
